harf module update

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Ant Design Pro</title>
-  <link rel="icon" href="/favicon.png" type="image/x-icon">
+  <title>美好食后台管理系统</title>
+  <link rel="icon" href="/logo.png" type="image/x-icon">
 </head>
 
 <body>
